src/objects/ADvendio__SelectedPublicationDate__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__CampaignItem__c</fullName>
        <label>CampaignItem</label>
        <referenceTo>ADvendio__Campaign_Item__c</referenceTo>
        <relationshipLabel>Selected Publication Dates</relationshipLabel>
        <relationshipName>SelectedPublicationDates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__PublicationDate__c</fullName>
        <label>PublicationDate</label>
        <referenceTo>ADvendio__PublicationDate__c</referenceTo>
        <relationshipLabel>Selected Publication Dates</relationshipLabel>
        <relationshipName>SelectedPublicationDates</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Selected Publication Date</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__CampaignItem__c</columns>
        <columns>ADvendio__PublicationDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Selected Publication Date Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Selected Publication Dates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>